[package]
name = "raystack"
version = "0.9.2"
authors = ["a-mackay <amackayfoss@outlook.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/a-mackay/raystack"
description = "WIP SkySpark client"
keywords = ["skyspark", "haystack"]


[features]
grid_csv = ["csv"]


[dependencies]
base64 = "0.13"
chrono = "0.4"
chrono-tz = "0.5"
csv = { version = "1.1", optional = true }
raystack_core = { version = "0.5", features = ["json"] }
reqwest = { version = "0.11", default-features = false, features = ["default-tls", "json"] }
ring = "0.16.20"
serde_json = "1.0"
thiserror = "1.0"
url = "2.2"


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
