[package]
name = "raystack"
version = "0.10.0"
authors = ["a-mackay <amackayfoss@outlook.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/a-mackay/raystack"
description = "WIP SkySpark client"
keywords = ["skyspark", "haystack"]


[features]
grid_csv = ["csv"]


[dependencies]
base64 = "0.13"
chrono = "0.4"
chrono-tz = "0.5"
csv = { version = "1.1", optional = true }
hmac = "0.11.0"
pbkdf2 = { version = "0.8", default-features = false }
raystack_core = { version = "0.5", features = ["json"] }
reqwest = { version = "0.11", default-features = false, features = ["default-tls", "json"] }
ring = "0.16.20"
sha2 = "0.9.5"
serde_json = "1.0"
thiserror = "1.0"
url = "2.2"


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
